<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:fontFamily="@font/roboto_bolditalic"
        android:hint="@string/username"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvLogin" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/input"
        android:fontFamily="@font/roboto_bolditalic"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUser" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/ButtonPrimary"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_firts"
        android:text="@string/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <ImageButton
        android:id="@+id/imbFacebook"
        android:layout_width="65dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_social"
        android:contentDescription="@string/descr_imbF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/facebook"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imbFacebook3"
        android:layout_width="65dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_social"
        android:contentDescription="@string/register_btn"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/imbFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/ic_baseline_add_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imbFacebook4"
        android:layout_width="65dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/btn_social"
        android:contentDescription="@string/descr_imbS"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/imbFacebook"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:srcCompat="@drawable/ic_baseline_input_24"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>